# swaylab

./: .gitignore  README.md
21 Support multi-span errors and warnings/: README.md
4587 Give more helpful error when shadowing const/: README.md
4898 Non-idiomatic name warning not shown in most of the cases/: README.md
D Hashing/: Forc.toml
I 4587 Give more helpful error when shadowing const/: README.md
I 5039 Internal compiler error - attempting to split OOB/: Forc.toml
I 5081 Emit compile error if the same match arm variables in alternatives are not of the same type/: README.md
I 5173 if-let expression causes side effects/: Forc.toml
I 5261 Diagnostic for configurables only used in const expressions/: harness.rs
I 5560 Internal compiler error when all match branches return Never/: Forc.toml
I 6118 Compiler panics and no DCA warning when a configurable is never used/: Forc.toml
I 6205 ICE Internal compiler error Block while has a misplaced terminator/: Forc.toml
M Importing modules/: Forc.toml
M Predicate byetcode size and logic operators/: Predicate bytecode size and logic operators.ods
M Referencing function arguments/: Forc.toml
M Storage v3.0/: Storage v3.0 Brainstormig.odp  play01.sw  play02.sw  play06_scalar_array_map_traits.sw
Misc/Parallel execution of E2E tests/test_runner_example_03_tokio/: Cargo.toml
Misc/Parallel execution of E2E tests/test_runner_example_03_tokio/src/: main.rs
common/: Forc.toml  README.md
declare references/: Forc.toml
geometry/: README.md
new_plays/: Forc.toml
qnd_dbg/: README.md  qnd_dbg.rs  (+5 more)
(+1530 files in other folders)
